Added : Feedback rating and get average rating per book
