# app/Http/Controllers/FeedbackController.php
@@ -6,6 +6,7 @@ use Illuminate\Http\Request;
 use App\Exceptions\BookStoreException;
 use Illuminate\Support\Facades\Validator;
 use App\Models\Feedback;
+use App\Models\Book;
 use Illuminate\Support\Facades\Log;
 use Tymon\JWTAuth\Facades\JWTAuth;
 
@@ -22,18 +23,20 @@ class FeedbackController extends Controller
      *            mediaType="multipart/form-data",
      *            @OA\Schema(
      *               type="object",
-     *             required={"feedback"},
+     *             required={"book_id","feedback","rating"},
+     *               @OA\Property(property="book_id", type="integer"),
      *               @OA\Property(property="feedback", type="string"),
+     *               @OA\Property(property="rating", type="integer"),
      *            ),
      *        ),
      *    ),
-     *   @OA\Response(response=201, description="feedback submited successfully"),
+     *   @OA\Response(response=201, description="Thanks for providing us with detailed feedback about our service."),
      *   @OA\Response(response=401, description="Invalid authorization token"),
      *   security={
      *       {"Bearer": {}}
      *     }
      * )
-     * Function takes input as feedback from user and 
+     * Function takes input as feedback rating and book id from user and 
      * store in the feedbacks database. 
      */
 
@@ -41,7 +44,9 @@ class FeedbackController extends Controller
     {
         try {
             $validator = Validator::make($request->all(), [
+                'book_id' => 'required|integer',
                 'feedback' => 'required|string|between:4,1000',
+                'rating' => 'required|integer',
             ]);
 
             if ($validator->fails()) {
@@ -49,19 +54,21 @@ class FeedbackController extends Controller
             }
 
             $currentUser = JWTAuth::parseToken()->authenticate();
+            $book = new Book();
             if (!$currentUser) {
                 throw new BookStoreException("Invalid authorization token", 401);
             } else {
                 $feedback = new Feedback();
-                $feedback->feedback = $request->input('feedback');
-                $feedback->user_id = $currentUser->id;
-                $feedback->save();
+                $book_id = $request->input('book_id');
+                $book->findingbook($book_id);
+                $feedback->saveingFeedback($request, $currentUser)->save();
             }
 
             Log::info('feedback created', ['user_id' => $feedback->user_id]);
             return response()->json([
                 'status' => 201,
-                'message' => 'feedback submited successfully'
+                'message' => 'Thanks for providing us with detailed feedback about our service.',
+                'Average Rating ' => $feedback->avgRating($book_id)
             ], 201);
         } catch (BookStoreException $exception) {
             Log::error('Invalid User');
